Home page changes

--- a/skip/front-end/Skip/src/pages/home/home.html
+++ b/skip/front-end/Skip/src/pages/home/home.html
@@ -1,9 +1,12 @@
-<ion-title>
-  <div class="app-title">Skip</div>
-</ion-title>
-
 
 <ion-content padding>
+
+<div class="branding">
+   <img class="skip-title" src="assets/imgs/skip-title.png"/>
+
+   <img class="skip-logo" src="assets/imgs/skip-logo.png"/>
+</div>
+
 <div class="overlay">
   <ion-list class="userInfo">
     <ion-item>
