Waiter page style added and skipper number blue box

--- a/skip/front-end/Skip/src/pages/skipper/skipper.html
+++ b/skip/front-end/Skip/src/pages/skipper/skipper.html
@@ -11,7 +11,7 @@
 
   <div class="info">
     <p class="restaurant"> Chic-Fil-A </p>
-    <p class="waiters"> 2 Waiters </p>
+    <p class="waiters"> <ion-badge class="num-waiters" item-end>2</ion-badge> Waiters </p>
   </div>
 
   <ion-card class="restaurantDiv">
