--- a/skip/front-end/Skip/src/pages/waiter/waiter.html
+++ b/skip/front-end/Skip/src/pages/waiter/waiter.html
@@ -1,12 +1,28 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Waiter</ion-title>
+    <ion-title>Waiting on a little extra...</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+   <div class="waiter-subtitle">Which restaurant are you in line for?</div>
+
+   <ion-card class = "restaurant-list">
+      <img src="assets/ChicFilA.png"/>
+      <ion-card-content>
+         <ion-card-title>
+            Chic-Fil-A
+         </ion-card-title>
+         <p>
+            A popular fast food restaurant known for its chicken biscuits.
+            <br>
+            @ UT Knoxville
+         </p>
+      </ion-card-content>
+   </ion-card>
 
 </ion-content>
